org.sourcepit.antlr4.eclipse.lang.tests/gen/org/sourcepit/antlr4/eclipse/lang/tests/javadoc/JavadocParser.java
// Generated from Javadoc.g4 by ANTLR 4.5

/**
 * Copyright 2015 Bernd Vogt and others.
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 * http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package org.sourcepit.antlr4.eclipse.lang.tests.javadoc;

import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class JavadocParser extends Parser {
   static {
      RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION);
   }

   protected static final DFA[] _decisionToDFA;
   protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
   public static final int T__0 = 1, T__1 = 2, AT = 3, STAR = 4, WORD = 5, NL = 6, WS = 7;
   public static final int RULE_javadoc = 0, RULE_javadocStart = 1, RULE_javadocEnd = 2, RULE_mainDescription = 3,
      RULE_line = 4, RULE_prefix = 5, RULE_text = 6, RULE_tagSection = 7, RULE_tag = 8, RULE_tagName = 9;
   public static final String[] ruleNames = { "javadoc", "javadocStart", "javadocEnd", "mainDescription", "line",
      "prefix", "text", "tagSection", "tag", "tagName" };

   private static final String[] _LITERAL_NAMES = { null, "'/**'", "'*/'", "'@'", "'*'" };
   private static final String[] _SYMBOLIC_NAMES = { null, null, null, "AT", "STAR", "WORD", "NL", "WS" };
   public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

   /**
    * @deprecated Use {@link #VOCABULARY} instead.
    */
   @Deprecated
   public static final String[] tokenNames;

   static {
      tokenNames = new String[_SYMBOLIC_NAMES.length];
      for (int i = 0; i < tokenNames.length; i++) {
         tokenNames[i] = VOCABULARY.getLiteralName(i);
         if (tokenNames[i] == null) {
            tokenNames[i] = VOCABULARY.getSymbolicName(i);
         }

         if (tokenNames[i] == null) {
            tokenNames[i] = "<INVALID>";
         }
      }
   }

   @Override
   @Deprecated
   public String[] getTokenNames() {
      return tokenNames;
   }

   @Override

   public Vocabulary getVocabulary() {
      return VOCABULARY;
   }

   @Override
   public String getGrammarFileName() {
      return "Javadoc.g4";
   }

   @Override
   public String[] getRuleNames() {
      return ruleNames;
   }

   @Override
   public String getSerializedATN() {
      return _serializedATN;
   }

   @Override
   public ATN getATN() {
      return _ATN;
   }

   public JavadocParser(TokenStream input) {
      super(input);
      _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
   }

   public static class JavadocContext extends ParserRuleContext {
      public JavadocStartContext javadocStart() {
         return getRuleContext(JavadocStartContext.class, 0);
      }

      public JavadocEndContext javadocEnd() {
         return getRuleContext(JavadocEndContext.class, 0);
      }

      public MainDescriptionContext mainDescription() {
         return getRuleContext(MainDescriptionContext.class, 0);
      }

      public TagSectionContext tagSection() {
         return getRuleContext(TagSectionContext.class, 0);
      }

      public JavadocContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_javadoc;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).enterJavadoc(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).exitJavadoc(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof JavadocVisitor)
            return ((JavadocVisitor<? extends T>) visitor).visitJavadoc(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final JavadocContext javadoc() throws RecognitionException {
      JavadocContext _localctx = new JavadocContext(_ctx, getState());
      enterRule(_localctx, 0, RULE_javadoc);
      try {
         enterOuterAlt(_localctx, 1);
         {
            setState(20);
            javadocStart();
            setState(22);
            switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
               case 1 : {
                  setState(21);
                  mainDescription();
               }
                  break;
            }
            setState(25);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
               case 1 : {
                  setState(24);
                  tagSection();
               }
                  break;
            }
            setState(27);
            javadocEnd();
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class JavadocStartContext extends ParserRuleContext {
      public List<TerminalNode> STAR() {
         return getTokens(JavadocParser.STAR);
      }

      public TerminalNode STAR(int i) {
         return getToken(JavadocParser.STAR, i);
      }

      public List<TerminalNode> WS() {
         return getTokens(JavadocParser.WS);
      }

      public TerminalNode WS(int i) {
         return getToken(JavadocParser.WS, i);
      }

      public TerminalNode NL() {
         return getToken(JavadocParser.NL, 0);
      }

      public JavadocStartContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_javadocStart;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).enterJavadocStart(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).exitJavadocStart(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof JavadocVisitor)
            return ((JavadocVisitor<? extends T>) visitor).visitJavadocStart(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final JavadocStartContext javadocStart() throws RecognitionException {
      JavadocStartContext _localctx = new JavadocStartContext(_ctx, getState());
      enterRule(_localctx, 2, RULE_javadocStart);
      try {
         int _alt;
         enterOuterAlt(_localctx, 1);
         {
            setState(29);
            match(T__0);
            setState(33);
            _errHandler.sync(this);
            _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
               if (_alt == 1) {
                  {
                     {
                        setState(30);
                        match(STAR);
                     }
                  }
               }
               setState(35);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
            }
            setState(39);
            _errHandler.sync(this);
            _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
               if (_alt == 1) {
                  {
                     {
                        setState(36);
                        match(WS);
                     }
                  }
               }
               setState(41);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
            }
            setState(43);
            switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
               case 1 : {
                  setState(42);
                  match(NL);
               }
                  break;
            }
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class JavadocEndContext extends ParserRuleContext {
      public List<TerminalNode> WS() {
         return getTokens(JavadocParser.WS);
      }

      public TerminalNode WS(int i) {
         return getToken(JavadocParser.WS, i);
      }

      public List<TerminalNode> STAR() {
         return getTokens(JavadocParser.STAR);
      }

      public TerminalNode STAR(int i) {
         return getToken(JavadocParser.STAR, i);
      }

      public JavadocEndContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_javadocEnd;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).enterJavadocEnd(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).exitJavadocEnd(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof JavadocVisitor)
            return ((JavadocVisitor<? extends T>) visitor).visitJavadocEnd(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final JavadocEndContext javadocEnd() throws RecognitionException {
      JavadocEndContext _localctx = new JavadocEndContext(_ctx, getState());
      enterRule(_localctx, 4, RULE_javadocEnd);
      int _la;
      try {
         enterOuterAlt(_localctx, 1);
         {
            setState(48);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la == WS) {
               {
                  {
                     setState(45);
                     match(WS);
                  }
               }
               setState(50);
               _errHandler.sync(this);
               _la = _input.LA(1);
            }
            setState(54);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la == STAR) {
               {
                  {
                     setState(51);
                     match(STAR);
                  }
               }
               setState(56);
               _errHandler.sync(this);
               _la = _input.LA(1);
            }
            setState(57);
            match(T__1);
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class MainDescriptionContext extends ParserRuleContext {
      public List<LineContext> line() {
         return getRuleContexts(LineContext.class);
      }

      public LineContext line(int i) {
         return getRuleContext(LineContext.class, i);
      }

      public MainDescriptionContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_mainDescription;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).enterMainDescription(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).exitMainDescription(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof JavadocVisitor)
            return ((JavadocVisitor<? extends T>) visitor).visitMainDescription(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final MainDescriptionContext mainDescription() throws RecognitionException {
      MainDescriptionContext _localctx = new MainDescriptionContext(_ctx, getState());
      enterRule(_localctx, 6, RULE_mainDescription);
      try {
         int _alt;
         enterOuterAlt(_localctx, 1);
         {
            setState(60);
            _errHandler.sync(this);
            _alt = 1;
            do {
               switch (_alt) {
                  case 1 : {
                     {
                        setState(59);
                        line();
                     }
                  }
                     break;
                  default :
                     throw new NoViableAltException(this);
               }
               setState(62);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
            }
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class LineContext extends ParserRuleContext {
      public TextContext text() {
         return getRuleContext(TextContext.class, 0);
      }

      public PrefixContext prefix() {
         return getRuleContext(PrefixContext.class, 0);
      }

      public TerminalNode NL() {
         return getToken(JavadocParser.NL, 0);
      }

      public List<TerminalNode> WS() {
         return getTokens(JavadocParser.WS);
      }

      public TerminalNode WS(int i) {
         return getToken(JavadocParser.WS, i);
      }

      public LineContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_line;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).enterLine(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).exitLine(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof JavadocVisitor)
            return ((JavadocVisitor<? extends T>) visitor).visitLine(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final LineContext line() throws RecognitionException {
      LineContext _localctx = new LineContext(_ctx, getState());
      enterRule(_localctx, 8, RULE_line);
      int _la;
      try {
         setState(81);
         switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
            case 1 :
               enterOuterAlt(_localctx, 1); {
               setState(65);
               switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                  case 1 : {
                     setState(64);
                     prefix();
                  }
                     break;
               }
               setState(67);
               text();
               setState(69);
               switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
                  case 1 : {
                     setState(68);
                     match(NL);
                  }
                     break;
               }
            }
               break;
            case 2 :
               enterOuterAlt(_localctx, 2); {
               setState(71);
               prefix();
               setState(72);
               match(NL);
            }
               break;
            case 3 :
               enterOuterAlt(_localctx, 3); {
               setState(77);
               _errHandler.sync(this);
               _la = _input.LA(1);
               while (_la == WS) {
                  {
                     {
                        setState(74);
                        match(WS);
                     }
                  }
                  setState(79);
                  _errHandler.sync(this);
                  _la = _input.LA(1);
               }
               setState(80);
               match(NL);
            }
               break;
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class PrefixContext extends ParserRuleContext {
      public List<TerminalNode> WS() {
         return getTokens(JavadocParser.WS);
      }

      public TerminalNode WS(int i) {
         return getToken(JavadocParser.WS, i);
      }

      public List<TerminalNode> STAR() {
         return getTokens(JavadocParser.STAR);
      }

      public TerminalNode STAR(int i) {
         return getToken(JavadocParser.STAR, i);
      }

      public PrefixContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_prefix;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).enterPrefix(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).exitPrefix(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof JavadocVisitor)
            return ((JavadocVisitor<? extends T>) visitor).visitPrefix(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final PrefixContext prefix() throws RecognitionException {
      PrefixContext _localctx = new PrefixContext(_ctx, getState());
      enterRule(_localctx, 10, RULE_prefix);
      int _la;
      try {
         int _alt;
         enterOuterAlt(_localctx, 1);
         {
            setState(86);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la == WS) {
               {
                  {
                     setState(83);
                     match(WS);
                  }
               }
               setState(88);
               _errHandler.sync(this);
               _la = _input.LA(1);
            }
            setState(90);
            _errHandler.sync(this);
            _alt = 1;
            do {
               switch (_alt) {
                  case 1 : {
                     {
                        setState(89);
                        match(STAR);
                     }
                  }
                     break;
                  default :
                     throw new NoViableAltException(this);
               }
               setState(92);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 13, _ctx);
            }
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            setState(97);
            _errHandler.sync(this);
            _alt = getInterpreter().adaptivePredict(_input, 14, _ctx);
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
               if (_alt == 1) {
                  {
                     {
                        setState(94);
                        match(WS);
                     }
                  }
               }
               setState(99);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 14, _ctx);
            }
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class TextContext extends ParserRuleContext {
      public List<TerminalNode> WORD() {
         return getTokens(JavadocParser.WORD);
      }

      public TerminalNode WORD(int i) {
         return getToken(JavadocParser.WORD, i);
      }

      public List<TerminalNode> STAR() {
         return getTokens(JavadocParser.STAR);
      }

      public TerminalNode STAR(int i) {
         return getToken(JavadocParser.STAR, i);
      }

      public List<TerminalNode> WS() {
         return getTokens(JavadocParser.WS);
      }

      public TerminalNode WS(int i) {
         return getToken(JavadocParser.WS, i);
      }

      public List<TerminalNode> AT() {
         return getTokens(JavadocParser.AT);
      }

      public TerminalNode AT(int i) {
         return getToken(JavadocParser.AT, i);
      }

      public TextContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_text;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).enterText(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).exitText(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof JavadocVisitor)
            return ((JavadocVisitor<? extends T>) visitor).visitText(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final TextContext text() throws RecognitionException {
      TextContext _localctx = new TextContext(_ctx, getState());
      enterRule(_localctx, 12, RULE_text);
      int _la;
      try {
         int _alt;
         setState(128);
         switch (getInterpreter().adaptivePredict(_input, 20, _ctx)) {
            case 1 :
               enterOuterAlt(_localctx, 1); {
               setState(107);
               _errHandler.sync(this);
               _alt = 1;
               do {
                  switch (_alt) {
                     case 1 : {
                        {
                           setState(100);
                           _la = _input.LA(1);
                           if (!(_la == STAR || _la == WORD)) {
                              _errHandler.recoverInline(this);
                           }
                           else {
                              consume();
                           }
                           setState(104);
                           _errHandler.sync(this);
                           _alt = getInterpreter().adaptivePredict(_input, 15, _ctx);
                           while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                              if (_alt == 1) {
                                 {
                                    {
                                       setState(101);
                                       _la = _input.LA(1);
                                       if (!((((_la) & ~0x3f) == 0 && ((1L << _la)
                                          & ((1L << AT) | (1L << STAR) | (1L << WORD) | (1L << WS))) != 0))) {
                                          _errHandler.recoverInline(this);
                                       }
                                       else {
                                          consume();
                                       }
                                    }
                                 }
                              }
                              setState(106);
                              _errHandler.sync(this);
                              _alt = getInterpreter().adaptivePredict(_input, 15, _ctx);
                           }
                        }
                     }
                        break;
                     default :
                        throw new NoViableAltException(this);
                  }
                  setState(109);
                  _errHandler.sync(this);
                  _alt = getInterpreter().adaptivePredict(_input, 16, _ctx);
               }
               while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            }
               break;
            case 2 :
               enterOuterAlt(_localctx, 2); {
               setState(124);
               _errHandler.sync(this);
               _alt = 1;
               do {
                  switch (_alt) {
                     case 1 : {
                        {
                           setState(114);
                           _errHandler.sync(this);
                           _la = _input.LA(1);
                           while (_la == WS) {
                              {
                                 {
                                    setState(111);
                                    match(WS);
                                 }
                              }
                              setState(116);
                              _errHandler.sync(this);
                              _la = _input.LA(1);
                           }
                           setState(117);
                           match(WORD);
                           setState(121);
                           _errHandler.sync(this);
                           _alt = getInterpreter().adaptivePredict(_input, 18, _ctx);
                           while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                              if (_alt == 1) {
                                 {
                                    {
                                       setState(118);
                                       _la = _input.LA(1);
                                       if (!((((_la) & ~0x3f) == 0 && ((1L << _la)
                                          & ((1L << AT) | (1L << STAR) | (1L << WORD) | (1L << WS))) != 0))) {
                                          _errHandler.recoverInline(this);
                                       }
                                       else {
                                          consume();
                                       }
                                    }
                                 }
                              }
                              setState(123);
                              _errHandler.sync(this);
                              _alt = getInterpreter().adaptivePredict(_input, 18, _ctx);
                           }
                        }
                     }
                        break;
                     default :
                        throw new NoViableAltException(this);
                  }
                  setState(126);
                  _errHandler.sync(this);
                  _alt = getInterpreter().adaptivePredict(_input, 19, _ctx);
               }
               while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            }
               break;
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class TagSectionContext extends ParserRuleContext {
      public List<TagContext> tag() {
         return getRuleContexts(TagContext.class);
      }

      public TagContext tag(int i) {
         return getRuleContext(TagContext.class, i);
      }

      public TagSectionContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_tagSection;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).enterTagSection(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).exitTagSection(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof JavadocVisitor)
            return ((JavadocVisitor<? extends T>) visitor).visitTagSection(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final TagSectionContext tagSection() throws RecognitionException {
      TagSectionContext _localctx = new TagSectionContext(_ctx, getState());
      enterRule(_localctx, 14, RULE_tagSection);
      try {
         int _alt;
         enterOuterAlt(_localctx, 1);
         {
            setState(131);
            _errHandler.sync(this);
            _alt = 1;
            do {
               switch (_alt) {
                  case 1 : {
                     {
                        setState(130);
                        tag();
                     }
                  }
                     break;
                  default :
                     throw new NoViableAltException(this);
               }
               setState(133);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 21, _ctx);
            }
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class TagContext extends ParserRuleContext {
      public TerminalNode AT() {
         return getToken(JavadocParser.AT, 0);
      }

      public PrefixContext prefix() {
         return getRuleContext(PrefixContext.class, 0);
      }

      public TagNameContext tagName() {
         return getRuleContext(TagNameContext.class, 0);
      }

      public List<TerminalNode> WS() {
         return getTokens(JavadocParser.WS);
      }

      public TerminalNode WS(int i) {
         return getToken(JavadocParser.WS, i);
      }

      public List<LineContext> line() {
         return getRuleContexts(LineContext.class);
      }

      public LineContext line(int i) {
         return getRuleContext(LineContext.class, i);
      }

      public TagContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_tag;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).enterTag(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).exitTag(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof JavadocVisitor)
            return ((JavadocVisitor<? extends T>) visitor).visitTag(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final TagContext tag() throws RecognitionException {
      TagContext _localctx = new TagContext(_ctx, getState());
      enterRule(_localctx, 16, RULE_tag);
      int _la;
      try {
         int _alt;
         enterOuterAlt(_localctx, 1);
         {
            setState(136);
            _la = _input.LA(1);
            if (_la == STAR || _la == WS) {
               {
                  setState(135);
                  prefix();
               }
            }

            setState(138);
            match(AT);
            setState(140);
            switch (getInterpreter().adaptivePredict(_input, 23, _ctx)) {
               case 1 : {
                  setState(139);
                  tagName();
               }
                  break;
            }
            setState(145);
            _errHandler.sync(this);
            _alt = getInterpreter().adaptivePredict(_input, 24, _ctx);
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
               if (_alt == 1) {
                  {
                     {
                        setState(142);
                        match(WS);
                     }
                  }
               }
               setState(147);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 24, _ctx);
            }
            setState(151);
            _errHandler.sync(this);
            _alt = getInterpreter().adaptivePredict(_input, 25, _ctx);
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
               if (_alt == 1) {
                  {
                     {
                        setState(148);
                        line();
                     }
                  }
               }
               setState(153);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 25, _ctx);
            }
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class TagNameContext extends ParserRuleContext {
      public List<TerminalNode> WORD() {
         return getTokens(JavadocParser.WORD);
      }

      public TerminalNode WORD(int i) {
         return getToken(JavadocParser.WORD, i);
      }

      public List<TerminalNode> AT() {
         return getTokens(JavadocParser.AT);
      }

      public TerminalNode AT(int i) {
         return getToken(JavadocParser.AT, i);
      }

      public List<TerminalNode> STAR() {
         return getTokens(JavadocParser.STAR);
      }

      public TerminalNode STAR(int i) {
         return getToken(JavadocParser.STAR, i);
      }

      public TagNameContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_tagName;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).enterTagName(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof JavadocListener)
            ((JavadocListener) listener).exitTagName(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof JavadocVisitor)
            return ((JavadocVisitor<? extends T>) visitor).visitTagName(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final TagNameContext tagName() throws RecognitionException {
      TagNameContext _localctx = new TagNameContext(_ctx, getState());
      enterRule(_localctx, 18, RULE_tagName);
      int _la;
      try {
         int _alt;
         enterOuterAlt(_localctx, 1);
         {
            setState(155);
            _errHandler.sync(this);
            _alt = 1;
            do {
               switch (_alt) {
                  case 1 : {
                     {
                        setState(154);
                        _la = _input.LA(1);
                        if (!((((_la) & ~0x3f) == 0
                           && ((1L << _la) & ((1L << AT) | (1L << STAR) | (1L << WORD))) != 0))) {
                           _errHandler.recoverInline(this);
                        }
                        else {
                           consume();
                        }
                     }
                  }
                     break;
                  default :
                     throw new NoViableAltException(this);
               }
               setState(157);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 26, _ctx);
            }
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static final ATN _ATN = new ATNDeserializer().deserialize(_serializedATN.toCharArray());

   static {
      _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
      for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
         _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
      }
   }
}